tests/files/flow_controller_tests/should_fail/016.cmdr
//Should fail due to divide by 0 with a variable holding 0 using set
x = 3;
y = 0;
x /= y;